# ai-github-actions

./: .gitignore  .yamlfix.toml  AGENTS.md  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  README.md  RELEASE.md  REVIEW_FINDINGS.md  SECURITY.md  base  mkdocs.yml  pyproject.toml  workflows
.github/: PULL_REQUEST_TEMPLATE.md
base/: action.yml
claude-workflows/: AGENTS.md  DEVELOPING.md  README.md
data/: downstream-users.json
docs/: agent-context.md  developing.md  fix-reaction-token-1267.md  hooks.py  index.md  migration-guide.md  release.md  security.md  upgrading.md
examples/: build-failure-buildkite.yml  build-failure-github-actions.yml  build-failure.yml  claude-mention.yml  feedback-summary.yml  issue-triage.yml  pr-review.yml  project-manager.yml
gh-agent-workflows/: AGENTS.md  DEVELOPING.md  README.md  agent-efficiency.md  agent-efficiency.yml  breaking-change-detect.md  breaking-change-detect.yml  bug-hunter.md  bug-hunter.yml  code-simplifier.md  code-simplifier.yml  docs-drift.md  docs-drift.yml  downstream-health.md  downstream-health.yml  gh-aw-workflows  issue-triage.md  issue-triage.yml  mention-in-issue.md  mention-in-issue.yml  mention-in-pr.md  mention-in-pr.yml  pr-checks-fix.md  pr-checks-fix.yml  pr-review.md  pr-review.yml  semantic-function-clustering.md  semantic-function-clustering.yml  small-problem-fixer.md  small-problem-fixer.yml  stale-issues.md  stale-issues.yml  test-improvement.md  test-improvement.yml
scripts/: backwards-compat.sh  check-nav-catalog.py  dogfood.sh  extract-lockfile-prompts.sh  extract-log-errors.py  (+14 more)
(+861 files in other folders)
