[project]
name = "ai-github-actions"
version = "0.1.0"
description = "GitHub Actions workflows for AI-powered development"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
